# bootleg-msn

./: .gitignore  LICENSE  README.md  TAURI_SETUP_COMPLETE.md  biome.json  capacitor.config.ts  index.html  netlify.toml  package.json  pnpm-lock.yaml  setup.mjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tests.json  vite.config.ts  vitest.config.ts
assets/: icon-generator.md
convex/: auth.test.ts  auth.ts  authVerification.test.ts  authVerification.ts  avatars.ts  contacts.test.ts  contacts.ts  deployment.ts  emailVerification.test.ts  emailVerification.ts  emotes.ts  files.test.ts  files.ts  groups.test.ts  groups.ts  invitations.test.ts  invitations.ts  messages.test.ts  messages.ts  notificationSettings.ts  nudges.test.ts  nudges.ts  oauth.test.ts  oauthUrl.ts  push.test.ts  push.ts  reactions.test.ts  reactions.ts  scheduledMessages.ts  schema.ts  testEmail.ts  themes.ts  tokenActions.ts  unifiedMessages.ts  userStatus.test.ts  userStatus.ts  utils.test.ts  utils.ts  validation.test.ts  validators.ts
docs/: DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SYSTEM.md  DESIGN_SYSTEM.md  MOBILE_SETUP.md  TAURI_API_REFERENCE.md  TAURI_ARCHITECTURE.md  TAURI_DEPLOYMENT.md  TAURI_INDEX.md  TAURI_SETUP.md  TAURI_TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  oauth-implementation.md
public/: build.json  sw.js
scripts/: admin-deployment.js  post-deploy.js  (+6 more)
src-tauri/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: main.rs
(+280 files in other folders)
